--- a/templates/invoices/invoice_detail.html
+++ b/templates/invoices/invoice_detail.html
@@ -31,7 +31,7 @@
         </div>
         <br>
         {% if invoice.client_email %}
-        <a href="{% url 'invoices:invoice_send_email' invoice.pk %}" class="btn btn-success w-100" onclick="return confirm('{% trans "Send invoice email to" %} {{ invoice.client_email }}?');">
+        <a href="{% url 'invoices:invoice_send_email' invoice.pk %}" class="btn btn-success w-100">
             <i class="bi bi-envelope"></i> {% trans "Send Email to Client" %}
         </a>
         {% else %}
